2005-06-26 Alain Magloire
	* model/org/eclipse/cdt/core/model/tests/StructuralTemplateTests.java

2005-06-25 Alain Magloire
	PR 98788: Templates
	* model/org/eclipse/cdt/core/model/tests/CModleElementsTests.java
	* model/org/eclipse/cdt/core/model/tests/ITemplateTests.java
	* model/org/eclipse/cdt/core/model/tests/StructureCModelElementsTests.java
	* model/org/eclipse/cdt/core/model/tests/StructuralTemplateTests.java

2005-06-16 Vladimir Hirsl
	Updated search related tests to reflect function parameters in search pattern.
	
	* indexer/org/eclipse/cdt/core/indexer/tests/DependencyTests.java
	* indexer/org/eclipse/cdt/core/indexer/tests/DOMSourceIndexerTests.java
	* regression/org/eclipse/cdt/core/tests/SearchRegressionTests.java
	* search/org/eclipse/cdt/core/search/tests/FunctionMethodPatternTests.java
	* search/org/eclipse/cdt/core/search/tests/SearchTestSuite.java
	
2005-06-08 Alain Magloire
	Remove the ResolverModelTest
	- misc/org/eclipse/cdt/core/filetype/tests/ResolverTeste.java
	- suite/org/eclipse/cdt/core/suite/AutomatedIntegrationSuite.java

2005-03-13 Bogdan Gheorghe
	Updated tests to work with new index framework
	
2005-02-02 Tanya Wolff
	added regression tests to AutomatedIntegrationSuite
	* build.properties
	* regression/org.eclipse.cdt.core.tests/SearchRegressionTests.java
	* suite/org.eclipse.cdt.core.suite/AutomatedIntegrationSuite.java

2005-01-31 Bogdan Gheorghe
	Patch from Dave Daoust to streamline Index Manager Tests
	
2004-12-7 Tanya Wolff
	incorporated comments from search regression test review
	
2004-11-15 Tanya Wolff
	added selection search tests to regression folder
	
2004-10-13 Tanya Wolff
	added search tests to regression folder

2004-10-4 Andrew Niefer
	created regression source folder and a test framework for search and content assist tests

2004-08-11 Bogdan Gheorghe
	Modified indexer test to work with new forward declartion encoding.
	
2004-08-06 Vladimir Hirsl

	Parser correctness tests in FailedCompleteParseASTTest.java